# BladtOS

./: .gitignore  .gitmodules  Boot.s  KernelProxy.cpp  Makefile  PreCommitHook.sh  README.md  SetupGit.sh  TODO.md  boot.s  kernel.c  link.ld
.cabgithooks/: post-commit
.githooks/: post-commit  post-push  pre-commit  pre-push
Boot/: Boot.s
Docs/: Diagram.md  Module Diagram  Module Diagram Edit Link.md  Module Diagram.drawio  ModuleDiagram.puml  README.md  UpdateDiagram.php
Kernel/: CMakeLists.txt  CMakeLists.txt.autosave  Kernel.cpp  Kernel.hpp  KernelMain.c  Main.cpp  VTableGuard.cpp  main.cpp
Kernel/Arch/: CMakeLists.txt
Kernel/Arch/i386/: CMakeLists.txt  Framebuffer.cpp  Framebuffer.hpp  Serialport.cpp  Serialport.hpp  Serialport.inc  Serialport_internal.hpp  Terminal.cpp  Terminal.hpp  Types.hpp  i386.cmake  io.asm  io.h
Kernel/Arch/i386/Boot/: Boot.asm  Boot.hpp  Link.ld
Kernel/Arch/i386/Internal/: Framebuffer.hpp  Serialport.hpp
Kernel/Arch/i386/Public/: InitMemory.cpp  InitMemory.hpp  Interrupt.cpp  Interrupt.hpp  LoadGDT.asm  LoadGDT.hpp  Log.cpp  Log.hpp  Serialport.hpp  Terminal.cpp  Terminal.hpp
Kernel/Arch/i386/libc/: CMakeLists.txt  assert.c  assert.h  new  string.c
Kernel/BLibC/: Assert.cpp  Assert.hpp  CMakeLists.txt  Float.hpp  String.cpp  String.hpp
Kernel/Boot/: Boot.asm  Link.ld
Kernel/KernelSource/: Kernel.cpp  Kernel.hpp  KernelMain.cpp
Kernel/Utility/: CMakeLists.txt  Time.hpp  Types.cpp  Vga.hpp
Kernel/Utility/Log/: BasicTypes.hpp  DummyLogger.hpp  Logger.hpp
build-Kernel-Desktop-Default/: CMakeCache.txt  Kernel.cbp  Kernel.elf  Makefile  cmake_install.cmake
build-Kernel-Desktop-Default/Arch/: Makefile  cmake_install.cmake
build-Kernel-Desktop-Default/Arch/i386/: Makefile  cmake_install.cmake
iso/boot/: kernel.elf
